# pipeline_etl

./: pyproject.toml
app/: main.py
app/pipeline/: extract.py  load.py  transform.py
tests/: test_pipeline.py
